- Until we redesign the logic to avoid a bad re-entrancy caused by processEvents while searching   into file contents, try to not crash at least. (metaKeyRx could be already deleted)

BUG: 193560
BUG: 203325


svn path=/trunk/KDE/kdebase/apps/; revision=1030054